Fix UrlLoader behavior in special cases

This fixes two issues:
- a bug causing URLs with schemes like ftp to always be opened in
  external applications. This happens because for these protocols
  KIO::OpenUrlJob doesn't emit the mimeTypeFound signal. To fix this, we
  explicitly use KIO::MimeTypeFinderJob to determine the mimetype of the
  URL
- a bug causing an attempt to open local URLs corresponding to
  nonexisting paths using the smb ioslave. This is fixed by explicitly
  checking whether the file exists and assigning it an "inode/directory"
  if it doesn't exist. This way, the URL is opened by whatever
  part/application the user chose to display directories (of course,
  that part or application will then fail to open the path).

BUG: 458467